--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.wastl"
-      android:versionCode="11"
+      package="com.ithtl.essapp"
+      android:versionCode="12"
       android:versionName="1.2.2">
       
     <uses-sdk android:minSdkVersion="8" />
