--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <uses-library android:name="com.google.android.maps" />
         
         <activity 
-            android:name="com.wastl.Activity.Splash.SplashActivity" 
+            android:name="com.wastl.Activity.SplashActivity" 
             android:screenOrientation="portrait" 
         	android:theme="@android:style/Theme.NoTitleBar">
         <intent-filter>
