Added details activity.
Implemented download of details of a given district as well as the parse. Active fire departments will be displayed in the details activity.


Signed-off-by: Lukas Bernreiter <lukas.bernreiter@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,8 +57,9 @@
 		<activity android:name="com.wastl.Activity.MissionActivity"
 				  android:theme="@android:style/Theme.NoTitleBar" />
 		
-		<activity android:name="com.wastl.Activity.FireDepartmentsActivity"
-				  android:label="Feuerwehren im Bezirk" />
+		<activity android:name="com.wastl.Activity.MissionDetailsActivity"
+				  android:label="Feuerwehren im Bezirk" 
+				  android:theme="@android:style/Theme.NoTitleBar" />
 		
 		<activity android:name="com.wastl.Activity.BrowseDistrictsActivity"
 				  android:label="Bezirksalarmzentralen in NÖ"
