--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,15 +4,15 @@
       android:versionCode="13"
       android:versionName="1.2.3">
       
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="14" />
+    
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />    
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
-
-    <application android:icon="@drawable/logo" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/logo" android:label="@string/app_name" >
         
         <uses-library android:name="com.google.android.maps" />
         
